Added contact icons to footer
Thanks to Dave's feedback

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,12 +25,33 @@
                 </a>
             </div>
             <div class="column has-text-left-desktop has-text-centered-mobile">
-            <!--
-                <a href="http://www.linkedin.com/in/{{site.linkedin_username}}" target="_blank" class="has-text-grey" style="font-size: 50px;">
+                <!--Email-->
+                <a href="mailto:{{site.email}}" class="has-text-grey">{{site.email}}</a>
+                            <div class="columns is-full is-size-1" style="justify-content: center;">
+                <!--Icons-->
+                <div class="columns is-full is-size-1 is-mobile" style="justify-content: center; margin: 12px;">
+                    <div class="column is-narrow">
+                        <a href="http://www.linkedin.com/in/{{site.linkedin_username}}" target="_blank" class="has-text-grey has-text-right-desktop" style="font-size: 30px;">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                    </div>
+                    <div class="column is-narrow">
+                        <a href="http://www.github.com/{{site.github_username}}" target="_blank" class="has-text-grey has-text-right-desktop" style="font-size: 30px;">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </div>
+                    <div class="column is-narrow">
+                        <a href="https://{{site.itchio_username}}.itch.io/" target="_blank" class="has-text-grey has-text-right-desktop" style="font-size: 30px;">
+                            <i class="fab fa-itch-io"></i>
+                        </a>
+                </div>
+
+                <!--
+                <a href="http://www.linkedin.com/in/{{site.linkedin_username}}" target="_blank" class="has-text-grey has-text-right-desktop" style="font-size: 30px;">
                     <i class="fab fa-linkedin"></i>
                 </a>
-            -->
-                <a href="mailto:{{site.email}}" class="has-text-grey">{{site.email}}</a>
+                    <a href="http://www.linkedin.com/in/{{site.linkedin_username}}" class="has-text-grey has-text-right-desktop">{{site.linkedin_username}}</a>
+                -->
             </div>
         </div>
     </div>
