Fixed resume - added version

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -56,7 +56,7 @@
                         </div>
                     -->
                         <div>
-                            <a href="/AmzyAmaliaZarcuResume.pdf" target="_blank" 
+                            <a href="/AmzyAmaliaZarcuResume.pdf?v=08-10-25" target="_blank" 
                                 class="button is-rounded is-uppercase has-text-weight-normal is-black is-outlined">Resume</a>
                             </a>
                         </div>
